--- a/src/components/leftBar/leftBar.scss
+++ b/src/components/leftBar/leftBar.scss
@@ -5,8 +5,8 @@
     color: themed("textColor");
     flex: 2;
     position: sticky;
-    top: 62px;
-    height: calc(100vh - 62px);
+    top: 71px;
+    height: calc(100vh - 71px);
     overflow: auto;
     &::-webkit-scrollbar {
       display: none;
@@ -57,5 +57,10 @@
         }
       }
     }
+  }
+}
+@include tablet {
+  .leftbar {
+    display: none !important;
   }
 }
