--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -5,11 +5,15 @@
     color: themed("textColor");
     flex: 3;
     position: sticky;
-    top: 62px;
-    height: calc(100vh - 62px);
+    top: 71px;
+    height: calc(100vh - 71px);
     overflow: auto;
     &::-webkit-scrollbar {
       display: none;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
     }
     .container {
       margin: 10px;
@@ -57,6 +61,7 @@
           }
           .buttons {
             button {
+              cursor: pointer;
               border: none;
               padding: 5px;
               margin: 5px;
@@ -73,5 +78,10 @@
         }
       }
     }
+  }
+}
+@include tablet {
+  .rightbar {
+    display: none !important;
   }
 }
