--- a/src/components/stories/stories.scss
+++ b/src/components/stories/stories.scss
@@ -1,12 +1,17 @@
+@import "../../style.scss";
 .stories {
   display: flex;
   gap: 15px;
+
   .story {
+    -webkit-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+    -moz-box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
+    box-shadow: 0px 0px 25px -10px rgba(0, 0, 0, 0.38);
     flex: 1;
     border-radius: 15px;
     position: relative;
     overflow: hidden;
-    height: 300px;
+    height: 200px;
     margin-bottom: 30px;
     img {
       width: 100%;
@@ -37,5 +42,10 @@
       left: 40px;
       color: white;
     }
+  }
+}
+@include tablet {
+  .story {
+    display: none !important;
   }
 }
